--- a/get-04-closure.html
+++ b/get-04-closure.html
@@ -4,14 +4,18 @@
 <head>
   <meta charset="utf-8" />
 
-  <title>Geolocation API</title>
+  <title>Create a Geolocation Closure</title>
 
   <link href="styles/site.css" rel="stylesheet" />
 </head>
 
 <body>
   <header>
-    <h1>Get Latitude/Longitude</h1>
+    <nav>
+      <a href="index.html">Home</a>
+    </nav>
+
+    <h1>Create a Geolocation Closure</h1>
   </header>
 
   <main>
@@ -20,14 +24,14 @@
     <p>Longitude: <span id="long"></span></p>
     <p>Lat/Long Accuracy (in meters): <span id="accuracy"></span></p>
     <p>Altitude (in meters above sea level): <span id="altitude"></span></p>
-    <p>Altitude Accuracy (in meters): <span id="altitudeAccuracy"></span></p>
+    <p>Altitude Accuracy (in meters): <span id="altitudeaccuracy"></span></p>
     <p>Heading (Degress from true north): <span id="heading"></span></p>
     <p>Speed (in meters/second): <span id="speed"></span></p>
 
     <button onclick="testGeoController();">Test geoController</button>
 
-    <div id="errorArea" class="alert d-none"></div>
-    
+    <div id="errorArea" class="alert d-none">
+    </div>
   </main>
 
   <script src="scripts/geoController.js" type="text/javascript"></script>
@@ -36,7 +40,7 @@
 
     window.onload = function () {
       geoController.getCurrentLocation(displayPosition, displayError);
-    }
+    };
 
     function displayPosition(pos) {
       document.getElementById("timestamp").innerText = new Date(pos.timestamp);
@@ -44,14 +48,13 @@
       document.getElementById("long").innerText = pos.coords.longitude;
       document.getElementById("accuracy").innerText = pos.coords.accuracy;
       document.getElementById("altitude").innerText = (pos.coords.altitude ? pos.coords.altitude : "n/a");
-      document.getElementById("altitudeAccuracy").innerText = (pos.coords.altitudeAccuracy ? pos.coords.altitudeAccuracy : "n/a");
+      document.getElementById("altitudeaccuracy").innerText = (pos.coords.altitudeAccuracy ? pos.coords.altitudeAccuracy : "n/a");
       document.getElementById("heading").innerText = pos.coords.heading;
       document.getElementById("speed").innerText = pos.coords.speed;
-
     }
 
     function displayError(msg) {
-      let elem = document.getElementById("errorArea")
+      let elem = document.getElementById("errorArea");
       elem.classList.remove("d-none");
       elem.innerHTML = msg;
     }
@@ -62,9 +65,9 @@
       console.log(geoController.getLastMessage());
       console.log(geoController.getOptions());
       geoController.setOptions({
-        enableHighAccuracy: false,
-        timeout: 5000,
-        maximumAge: 10000
+        enableHighAccuracy: false,  // Enable high accuracy, if available
+        timeout: 5000,            // 5 seconds
+        maximumAge: 10000         // Only accept cached positions whose age is not greater than 10 seconds
       });
       console.log(geoController.getOptions());
     }
