Finished third module. Learned how to link to open stree maps and google maps. Also learned how to embed map using OpenLayers API

--- a/index-geo.html
+++ b/index-geo.html
@@ -6,7 +6,7 @@
 
   <title>Geolocation API</title>
 
-  <link href="styles/site.css" rel="stylesheet" />
+  <link href="styles/site-geo.css" rel="stylesheet" />
 </head>
 
 <body>
